     array index while still accessing elements in the array.
   - The player now picks up items using the proper hand.  In previous
     commits, due to a typo, the player would always pick up all items in the
     weapon-hand.  Now the player will only pick up items in the weapon-hand
     if the item is a weapon OR the off-hand is already full.

  Changed:
   - The flags used to determine monster behavior and item types have been
     altered substantially, making the code much more readable and consistent.
   - Monster AI has been improved slightly, allowing the monster to do
     collision detection multiple times per turn.  This also prevents the
     goobling from using hax to walk across water diagonally.
   - Random number generator functions have been rewritten to be significantly
     more consistent and reduce the number of redundant or unnecessary
     functions.  Unique functions used to simulate real non-standardized dice
     like the d10 or the d100 remain, but everything else now uses `d` or
     `roll`.
   - Following feedback on the general readability of the source code, a new
     style guide has been written and the source code has been made (mostly)
     compliant with it.  The Style Guide is included at the bottom of the
     Guidelines for Contributors. (docs/CONTRIBUTING.md)
   - `keymap` is now no longer just a name used internally by comment lines
     but an actual alias.  This is to make it moderately easier to alter what
     a keymap is later on, but also to make the code that little bit more
     readable.
   - Items can now stack if their `stacks` variable is set to true.  An item's
     `count` is now the variable used to determine if an item is in a
     particular place or inventory slot.

  Added:
   - The player can now drop items.  By pressing the 'd' key, he will be able
     to drop an item from his weapon-hand or off-hand.  If only one hand has
     an item in it, it will be dropped automatically.  Alternatively, the